fixed url parsing

--- a/public/index.pug
+++ b/public/index.pug
@@ -19,13 +19,13 @@ html
           | If it does not contain a date or Unix timestamp, it returns null for those properties.
       h2 Example Usage
       code
-        a(href='#url/November%2025,%202016') #{url}/November%2025,%202016
+        a(href='/November%2025,%202016') #{url}/November%2025,%202016
         br
         | &#x9;
-        a(href='#url/November 25, 2016') #{url}/November 25, 2016
+        a(href='/November 25, 2016') #{url}/November 25, 2016
         br
         | &#x9;
-        a(href='#url/1450137600') #{url}/1450137600
+        a(href='/1450137600') #{url}/1450137600
         br
       h2 Example Output
       code
